[package]
name = "tulip"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13"
structopt = "0.3.11"
simd-json = "0.3.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde_json = "1.0.48"
mimalloc = "0.1.18"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
rust-argon2 = "0.8.1"
botan = "0.6.1"
tempfile = "3.1.0"