[package]
name = "tulip"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13"
structopt = "0.3"
simd-json = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1"
mimalloc = "0.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
rust-argon2 = "0.8"
botan = "0.6"
prettytable-rs = "0.8"
tempfile = "3"