[package]
name = "tulip"
version = "0.1.2"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "The endpoint of Project Polya"
keywords = ["project-polya", "judge", "image", "systemd-nspawn","firejail"]
categories = ["filesystem", "command-line-utilities"]
homepage = "https://github.com/project-polya"
repository = "https://github.com/project-polya/tulip"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13"
structopt = "0.3"
simd-json = { version = "0.3", features = ["allow-non-simd"] }
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1"
mimalloc = { version = "0.1", default_features = false }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
rust-argon2 = "0.8"
ring = "0.16"
prettytable-rs = "0.8"
tempfile = "3"